Fix 131 : - No yellow state - Blue state on focus - Get previous state back on blur (unfocus) - refractor some code (wraped in function and replaced evil if else into switch case (with fallthrough) - fixed rejected textarea border

--- a/src/Components/Input/Input.css
+++ b/src/Components/Input/Input.css
@@ -38,7 +38,7 @@ input:disabled {
   cursor: default;
 }
 
-.rejected {
+.form-input.rejected {
   border: solid 2px red;
 }
 
@@ -264,6 +264,3 @@ input {
   width: 100%;
 }
 
-.rejected {
-  border: solid 2px red;
-}
